--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "devDependencies": {
         "@vitejs/plugin-react": "^4.2.1",
+        "react": "^18.2.0",
         "solojsx": "^1.1.0",
         "typescript": "^5.2.2",
         "vite": "^5.0.8"
