--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
         "preview": "vite preview"
     },
     "devDependencies": {
-        "solojsx": "^2.2.5",
         "vite": "^5.4.2"
+    },
+    "dependencies": {
+        "solojsx": "^2.2.5"
     }
 }
