--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "preview": "vite preview"
-    },
-    "devDependencies": {
-        "vite": "^5.4.2"
-    },
-    "dependencies": {
-        "solojsx": "^2.4.1"
-    }
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "vite": "^5.4.2"
+  },
+  "dependencies": {
+    "solojsx": "2.4.11"
+  }
 }
